--- a/index.html
+++ b/index.html
@@ -204,65 +204,68 @@
   <section class="bg-light page-section" id="about">
     <div class="container">
 
-      <div class="d-flex justify-content-around">
+      <div class="row">
+        <!-- Buttons -->
+        <div class="col-lg-3 col-md-3 col-sm-12">
 
-      <!-- Buttons -->
-        <div class="mt-5 mb-5">
-          <div class="text-center mb-5">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-user-friends fa-stack-1x fa-inverse"></i>
-            </span>
-            <p class="text-muted">2 guests</p>
-          </div>
-          <div class="text-center mb-5">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-couch fa-stack-1x fa-inverse"></i>
-            </span>
-            <p class="text-muted m-0">Living room</p>
-            <p class="text-muted m-0">3.6m x 4m</p>
-          </div>
-          <div class="text-center mb-5">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-bed fa-stack-1x fa-inverse"></i>
-            </span>
-            <p class="text-muted m-0">1 Bedroom (1 Queen)</p>
-            <p class="text-muted m-0">2.7 x 4.1m</p>
-          </div>
-          <div class="text-center mb-5">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-hat-chef fa-stack-1x fa-inverse"></i>
-            </span>
-            <p class="text-muted m-0">Kitchenette</p>
-          </div>
-          <div class="text-center mb-5">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-leaf fa-stack-1x fa-inverse"></i>
-            </span>
-            <p class="text-muted m-0">Private garden</p>
-          </div>
-          <div class="text-center mb-5">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-toilet fa-stack-1x fa-inverse"></i>
-            </span>
-            <p class="text-muted m-0">1 Bathroom</p>
-          </div>
+          <div class="d-flex flex-wrap justify-content-center">
+
+
+                <div class="text-center mb-5">
+                  <span class="fa-stack fa-4x">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-user-friends fa-stack-1x fa-inverse"></i>
+                  </span>
+                  <p class="text-muted">2 guests</p>
+                </div>
+                <div class="text-center mb-5">
+                  <span class="fa-stack fa-4x">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-couch fa-stack-1x fa-inverse"></i>
+                  </span>
+                  <p class="text-muted m-0">Living room</p>
+                  <p class="text-muted m-0">3.6m x 4m</p>
+                </div>
+                <div class="text-center mb-5">
+                  <span class="fa-stack fa-4x">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-bed fa-stack-1x fa-inverse"></i>
+                  </span>
+                  <p class="text-muted m-0">1 Bedroom (1 Queen)</p>
+                  <p class="text-muted m-0">2.7 x 4.1m</p>
+                </div>
+                <div class="text-center mb-5">
+                  <span class="fa-stack fa-4x">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-hat-chef fa-stack-1x fa-inverse"></i>
+                  </span>
+                  <p class="text-muted m-0">Kitchenette</p>
+                </div>
+                <div class="text-center mb-5">
+                  <span class="fa-stack fa-4x">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-leaf fa-stack-1x fa-inverse"></i>
+                  </span>
+                  <p class="text-muted m-0">Private garden</p>
+                </div>
+                <div class="text-center mb-5">
+                  <span class="fa-stack fa-4x">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-toilet fa-stack-1x fa-inverse"></i>
+                  </span>
+                  <p class="text-muted m-0">1 Bathroom</p>
+                </div>
+
+              </div>
+
         </div>
 
         <!-- Text -->
-        <div style="width: 65%">
-          <div class="text-center">
-            <h2 class="section-heading text-uppercase">About</h2>
-          </div>
+        <div class="col-lg-9 col-md-9 col-sm-12">
 
           <div class="text-justify">
             <p class="text-muted">
-              Our light-filled two room apartment with private garden a peaceful hideaway. It is 24 hour accessible, spacious and self-contained. It is attached to our house by a double brick wall, and has its own entrance. Heating, cooling, internet and a laptop workspace are all included.
+              Our light-filled two room apartment with private garden is a peaceful hideaway. It is 24 hour accessible, spacious and self-contained. It is attached to our house by a double brick wall, and has its own entrance. Heating, cooling, internet and a laptop workspace are all included.
             </p>
             <p class="text-muted mt-2">
               Recently renovated, the lounge room has full length windows looking out to the garden, beautiful timber floors and a stocked up bookshelf. The bedroom has wool carpet, a large built-in wardrobe and quality linen. We are close to Grantham Street shops and tram line, and have very quick and easy access to the airport.
@@ -281,8 +284,8 @@
             </ul>
           </div>
 
-          <div class="d-flex justify-content-between">
-            <div class="m-2" style="width: 40%">
+          <div class="row">
+            <div class="col-lg-6 col-sm-12">
               <h4>Amenities</h4>
               <hr>
               <ul>
@@ -298,7 +301,7 @@
               </ul>
             </div>
 
-            <div class="m-2" style="width: 40%">
+            <div class="col-lg-6 col-sm-12">
               <h4>Available for loan</h4>
               <hr>
               <ul>
@@ -311,8 +314,8 @@
             </div>
           </div>
 
-          <div class="d-flex justify-content-between">
-            <div class="m-2" style="width: 40%">
+          <div class="row">
+            <div class="col-lg-6 col-sm-12">
               <h4>Kitchenette</h4>
               <hr>
               <ul>
@@ -324,7 +327,7 @@
               </ul>
             </div>
 
-            <div class="m-2" style="width: 40%">
+            <div class="col-lg-6 col-sm-12">
               <h4>Guest access</h4>
               <hr>
               <ul>
@@ -335,8 +338,8 @@
             </div>
           </div>
 
-          <div class="d-flex justify-content-between">
-            <div class="m-2" style="width: 40%">
+          <div class="row">
+            <div class="col-lg-6 col-sm-12">
               <h4>Safety features</h4>
               <hr>
               <ul>
@@ -346,7 +349,7 @@
               </ul>
             </div>
 
-            <div class="m-2" style="width: 40%">
+            <div class="col-lg-6 col-sm-12">
               <h4>Rules</h4>
               <hr>
               <ul>
@@ -359,29 +362,9 @@
               </ul>
             </div>
           </div>
-
-        </div>
-
-      </div>
-
-        <!-- Everyone welcome -->
-
-        </div>
-
-
-        <!-- Information row 1-->
-        <div class="d-flex justify-content-between">
-
-
-
         </div>
       </div>
 
-        <!-- Information row 2-->
-        <div class="d-flex justify-content-between">
-
-        </div>
-      </div>
     </div>
   </section>
 
