--- a/index.html
+++ b/index.html
@@ -95,105 +95,46 @@
 
       <div class="row">
 
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#galleryModal1">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <p>Private garden</p>
-              </div>
-            </div>
+          <div class="gallery-item col-lg-6 col-sm-12">
             <img class="img-fluid" src="img/gallery/courtyard.jpg" alt="">
-          </a>
+          </div>
+
+          <div class="gallery-item col-lg-6 col-sm-12">
+            <img class="img-fluid" src="img/gallery/courtyard_dog.jpg" alt="Courtyard">
+          </div>
+
+          <div class="gallery-item col-lg-6 col-sm-12">
+            <img class="img-fluid" src="img/gallery/living_room.jpg" alt="Living Room">
+          </div>
+
+          <div class="gallery-item col-lg-6 col-sm-12">
+            <img class="img-fluid" src="img/gallery/garden.jpg" alt="Garden">
+          </div>
+
+          <div class="gallery-item col-lg-6 col-sm-12">
+            <img class="img-fluid" src="img/gallery/living_room_2.jpg" alt="Living Room">
+          </div>
+
+          <div class="gallery-item col-lg-6 col-sm-12">
+            <img class="img-fluid" src="img/gallery/library.jpg" alt="Library">
+          </div>
+
         </div>
 
-        <div class="col-md-4 col-sm-6 portfolio-item portfolio-item-90">
-          <a class="portfolio-link" data-toggle="modal" href="#galleryModal2">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <p>Kitchenette</p>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/gallery/kitchenette.jpg" alt="">
-          </a>
-        </div>
+        <div class="row">
 
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#galleryModal3">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <p>Our dog was made by Alice Springs Aboriginal sculptor Dan Murphy.</p>
-              </div>
+            <div class="col-lg-4 gallery-item">
+              <img class="img-fluid" src="img/gallery/kitchenette.jpg" alt="Kitchenette" style="transform: rotate(90deg); object-fit: cover">
             </div>
-            <img class="img-fluid" src="img/gallery/courtyard_dog.jpg" alt="">
-          </a>
-        </div>
 
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#galleryModal4">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <p>Living room</p>
-              </div>
+            <div class="col-lg-4 gallery-item">
+              <img class="img-fluid" src="img/gallery/bedroom.jpg" alt="Bedroom" style="transform: rotate(90deg); object-fit: cover">
             </div>
-            <img class="img-fluid" src="img/gallery/living_room.jpg" alt="">
-          </a>
-        </div>
 
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#galleryModal5">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <div class="project-name">
-                  <p>Wisteria and clivias (sadly not all year round)</p>
-                </div>
-              </div>
+            <div class="col-lg-4 gallery-item">
+              <img class="img-fluid" src="img/gallery/bathroom.jpg" alt="Bathroom" style="transform: rotate(90deg); object-fit: cover">
             </div>
-            <img class="img-fluid" src="img/gallery/garden.jpg" alt="">
-          </a>
-        </div>
 
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#galleryModal6">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <p>Welcome to your hideaway</p>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/gallery/living_room_2.jpg" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#galleryModal7">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <p>Queen sized bed, new linen, big wardrobe, extra blankets and pillows</p>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/gallery/bedroom.jpg" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#galleryModal8">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <p>Brand new bathroom complete with an elephant with his trunk up!</p>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/gallery/bathroom.jpg" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#galleryModal9">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <p>Too many books: we know!</p>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/gallery/library.jpg" alt="">
-          </a>
         </div>
 
       </div>
@@ -377,6 +318,7 @@
   <!-- Location -->
   <section class="page-section" id="location">
     <div class="container">
+
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Location</h2>
@@ -390,56 +332,75 @@
                 style="border:none;"></iframe>
       </div>
 
-      <div class="row text-center">
-        <div>
-          <h4 class="service-heading">Brunswick</h4>
+
+      <h4 class="service-heading">Brunswick</h4>
+
+      <div class="row text-justify">
+
+        <div class="col-lg-8">
+
           <p class="text-muted">
             Brunswick is a multicultural suburb 4km from the city centre. It has a vast array of restaurants ranging from vegan to middle-eastern, lots of artist run galleries, hip cafes, live music, even an African jazz bar. Our house has really quick and easy access to Tullamarine Freeway with the advantage of no freeway noise.
           </p>
-        </div>
-      </div>
 
-      <h4 class="service-heading">Transport</h4>
+          <div class="d-flex flex-wrap justify-content-between">
+            <img src="img/brunswick/howler.png" alt="Howler Bar" width="48.5%" class="m-1">
+            <img src="img/brunswick/food.jpeg" alt="Multicultural Food" width="48.5%" class="m-1">
+            <img src="img/brunswick/blakdotgallery.jpeg" alt="Blak Dot Gallery" width="48.5%" class="m-1">
+            <img src="img/brunswick/royalpark.jpg" alt="Royal Park" width="48.5%" class="m-1">
 
-      <div class="row">
-        <div class="col-md-4">
+          </div>
 
-          <p>Easy walk to:</p>
-          <ul>
-            <li class="text-muted">Launderette (at the end of the street)</li>
-            <li class="text-muted">Grantham St shopping centre</li>
-            <li class="text-muted">Cafes</li>
-            <li class="text-muted">Union Hotel with beer garden and live music</li>
-            <li class="text-muted">Royal Park</li>
-            <li class="text-muted">Brunswick Pool (heated outdoor 50 metre + indoor pool + full gym)</li>
-            <li class="text-muted">RMIT School of Fashion and Textiles</li>
-          </ul>
         </div>
 
-        <div class="col-md-4">
-          <p>Tram #58 (3 mins walk) goes direct to:</p>
-          <ul>
-            <li class="text-muted">Hospital precinct</li>
-            <li class="text-muted">Melbourne University</li>
-            <li class="text-muted">Victoria Market</li>
-            <li class="text-muted">Zoo</li>
-            <li class="text-muted">CBD</li>
-            <li class="text-muted">St Kilda Road</li>
-          </ul>
-        </div>
+        <div class="col-lg-4">
 
-        <div class="col-md-4">
-          <p>Bus #504 (1 min walk):</p>
-          <ul>
-            <li class="text-muted">West to Moonee Ponds</li>
-            <li class="text-muted">East to Clifton Hill</li>
-          </ul>
+          <div class="col-lg-12">
 
-          <p>Walking and bike paths:</p>
-          <ul>
-            <li class="text-muted">Through Royal Park</li>
-            <li class="text-muted">Along Moonee Ponds Creek</li>
-          </ul>
+            <h6>Easy walk to:</h6>
+            <hr>
+            <ul>
+              <li class="text-muted">Launderette (at the end of the street)</li>
+              <li class="text-muted">Grantham St shopping centre</li>
+              <li class="text-muted">Cafes</li>
+              <li class="text-muted">Union Hotel with beer garden and live music</li>
+              <li class="text-muted">Royal Park</li>
+              <li class="text-muted">Brunswick Pool (heated outdoor 50 metre + indoor pool + full gym)</li>
+              <li class="text-muted">RMIT School of Fashion and Textiles</li>
+            </ul>
+          </div>
+
+          <div class="col-lg-12">
+            <h6>Tram #58 (3 mins walk) goes direct to:</h6>
+            <hr>
+            <ul>
+              <li class="text-muted">Hospital precinct</li>
+              <li class="text-muted">Melbourne University</li>
+              <li class="text-muted">Victoria Market</li>
+              <li class="text-muted">Zoo</li>
+              <li class="text-muted">CBD</li>
+              <li class="text-muted">St Kilda Road</li>
+            </ul>
+          </div>
+
+          <div class="col-lg-12">
+            <h6>Bus #504 (1 min walk):</h6>
+            <hr>
+            <ul>
+              <li class="text-muted">West to Moonee Ponds</li>
+              <li class="text-muted">East to Clifton Hill</li>
+            </ul>
+
+          </div>
+
+          <div class="col-lg-12">
+            <h6>Walking and bike paths:</h6>
+            <hr>
+            <ul>
+              <li class="text-muted">Through Royal Park</li>
+              <li class="text-muted">Along Moonee Ponds Creek</li>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -455,18 +416,20 @@
         </div>
       </div>
 
-      <div class="col-lg-8 mx-auto text-center">
+      <div class="col-lg-8 mx-auto text-justify">
 
         <p class="large text-muted">
           Greta and Tony live at the property. We are around weeknights, weekends and in the evenings to provide directions or advice on places to go and things to do. Once we have introduced ourselves we will just get on with our lives. We are more than happy to help you out and have a chat, or leave you to relax and enjoy the space in private.
         </p>
 
         <h4>About us</h4>
+        <hr>
         <p class="large text-muted">
           Greta and Tony work in education and health respectively. We enjoy all that Brunswick has to offer especially the cafes, pubs, live music and the tremendous variety of restaurants. When at home we live a pretty quiet life and enjoy trying our hand at every sort of cuisine, our current obsession is the food of Yotam Ottolenghi. Our adult children and friends drop in for coffee, wine and dinner.
         </p>
 
         <h4>Languages</h4>
+        <hr>
         <p class="large text-muted">
           English & Italian
         </p>
@@ -489,7 +452,7 @@
       <div class="row">
         <div class="col-lg-12">
 
-          <form action="https://formspree.io/ocgoodliffe@gmail.com" method="POST">
+          <form action="https://formspree.io/greta.jean.caruso@gmail.com" method="POST">
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
@@ -545,153 +508,6 @@
       </div>
     </div>
   </footer>
-
-  <!-- Portfolio Modals -->
-
-  <!-- Modal 1 -->
-  <div class="portfolio-modal modal fade" id="galleryModal1" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-          <img class="img-fluid d-block mx-auto" src="img/gallery/courtyard.jpg" alt="">
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal -->
-<!--     <div class="modal fade" id="galleryModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content" style="width: 80vw; height: 80vh">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <img src="img/gallery/courtyard.jpg" alt="" style="width: 100%; height: 100%; object-fit: center" >
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-  <!-- Modal 2 -->
-  <div class="portfolio-modal modal fade" id="galleryModal2" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-          <img class="img-fluid d-block mx-auto" src="img/gallery/kitchenette.jpg" alt="">
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal 3 -->
-  <div class="portfolio-modal modal fade" id="galleryModal3" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-          <img class="img-fluid d-block mx-auto" src="img/gallery/courtyard_dog.jpg" alt="">
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal 4 -->
-  <div class="portfolio-modal modal fade" id="galleryModal4" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-          <img class="img-fluid d-block mx-auto" src="img/gallery/living_room.jpg" alt="">
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal 5 -->
-  <div class="portfolio-modal modal fade" id="galleryModal5" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-          <img class="img-fluid d-block mx-auto" src="img/gallery/garden.jpg" alt="">
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal 6 -->
-  <div class="portfolio-modal modal fade" id="galleryModal6" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-          <img class="img-fluid d-block mx-auto" src="img/gallery/living_room_2.jpg" alt="">
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal 7 -->
-  <div class="portfolio-modal modal fade" id="galleryModal7" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-          <img class="img-fluid d-block mx-auto" src="img/gallery/bedroom.jpg" alt="">
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal 8 -->
-  <div class="portfolio-modal modal fade" id="galleryModal8" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-          <img class="img-fluid d-block mx-auto" src="img/gallery/bathroom.jpg" alt="">
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal 9 -->
-  <div class="portfolio-modal modal fade" id="galleryModal9" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-          <img class="img-fluid d-block mx-auto" src="img/gallery/library.jpg" alt="">
-      </div>
-    </div>
-  </div>
-
-
-
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
