--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@
           </p>
 
           <div class="row">
-            <img src="img/brunswick/howler.png" alt="Howler Bar" width="48.5%" class="p-1 col-xs-12 col-lg-6">
-            <img src="img/brunswick/food.jpeg" alt="Multicultural Food" width="48.5%" class="p-1 col-xs-12 col-lg-6">
-            <img src="img/brunswick/blakdotgallery.jpeg" alt="Blak Dot Gallery" width="48.5%" class="p-1 col-xs-12 col-lg-6">
-            <img src="img/brunswick/royalpark.jpg" alt="Royal Park" width="48.5%" class="p-1 col-xs-12 col-lg-6">
+            <img src="img/brunswick/howler.png" alt="Howler Bar" width="48.5%" class="p-1 col-xs-12 col-lg-6 img-fluid">
+            <img src="img/brunswick/food.jpeg" alt="Multicultural Food" width="48.5%" class="p-1 col-xs-12 col-lg-6 img-fluid">
+            <img src="img/brunswick/blakdotgallery.jpeg" alt="Blak Dot Gallery" width="48.5%" class="p-1 col-xs-12 col-lg-6 img-fluid">
+            <img src="img/brunswick/royalpark.jpg" alt="Royal Park" width="48.5%" class="p-1 col-xs-12 col-lg-6 img-fluid">
           </div>
 
         </div>
