--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="col-lg-12 col-xs-12 mx-auto">
           <div class="site-heading">
             <h1>Brunswick Hideaway</h1>
-            <h2>Guesthouse with private courtyard</h2>
+            <h2 style='font-weight: 200;'>Guesthouse with private courtyard</h2>
             <a class="btn btn-primary btn-xl js-scroll-trigger mt-4" href="#contact">Bookings</a>
           </div>
         </div>
@@ -89,7 +89,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Gallery</h2>
+          <h2 class="section-heading text-uppercase mb-5">Gallery</h2>
         </div>
       </div>
 
@@ -147,7 +147,7 @@
 
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">About</h2>
+          <h2 class="section-heading text-uppercase mb-5">About</h2>
         </div>
       </div>
 
@@ -321,7 +321,7 @@
 
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Location</h2>
+          <h2 class="section-heading text-uppercase mb-5">Location</h2>
         </div>
       </div>
 
@@ -411,7 +411,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Hosts</h2>
+          <h2 class="section-heading text-uppercase mb-5">Hosts</h2>
         </div>
       </div>
 
