--- a/index.html
+++ b/index.html
@@ -122,16 +122,25 @@
 
         <div class="row">
 
-            <div class="col-lg-4 col-sm-12 gallery-item">
-              <img class="img-fluid" src="img/gallery/kitchenette.jpg" alt="Kitchenette" style="transform: rotate(90deg) !important; object-fit: cover">
+<!--             <div class="col-lg-6 col-sm-12" style="height: 700px;">
+              <img src="img/gallery/kitchenette.jpg" alt="Kitchenette"
+              data-rotate="90" >
+            </div> -->
+
+<!--             <div class="col-lg-6 col-sm-12 gallery-item-90">
+              <img class="image-90" src="img/gallery/bedroom.jpg" alt="Bedroom">
+            </div> -->
+
+            <div class="col-lg-4 col-xs-12 gallery-item">
+              <img class="img-fluid" src="img/gallery/kitchenette.jpg" alt="Kitchenette" style="transform: rotate(90deg); object-fit: cover">
             </div>
 
-            <div class="col-lg-4 col-sm-12 gallery-item">
-              <img class="img-fluid" src="img/gallery/bedroom.jpg" alt="Bedroom" style="transform: rotate(90deg) !important; object-fit: cover">
+            <div class="col-lg-4 col-xs-12 gallery-item">
+              <img class="img-fluid" src="img/gallery/bedroom.jpg" alt="Bedroom" style="transform: rotate(90deg); object-fit: cover">
             </div>
 
-            <div class="col-lg-4 col-sm-12 gallery-item">
-              <img class="img-fluid" src="img/gallery/bathroom.jpg" alt="Bathroom" style="transform: rotate(90deg) !important; object-fit: cover">
+            <div class="col-lg-4 col-xs-12 gallery-item">
+              <img class="img-fluid" src="img/gallery/bathroom.jpg" alt="Bathroom" style="transform: rotate(90deg); object-fit: cover">
             </div>
 
         </div>
